5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1811_2569.log
== TEST (2019-06-13 17:59:02) 
-- CODE:
from numpy import*
from math import*
v = array(eval(input("Digite um vet: ")))
m = sum(v) / size(v)
d = sqrt((i - m)** 2)
for i in range(size(v)):
	print(round(d, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 17:59:37) 
-- CODE:
from numpy import*
from math import*
v = array(eval(input("Digite um vet: ")))
m = sum(v) / size(v)
d = sqrt((x[i] - m)** 2)
for i in range(size(v)):
	print(round(d, 3))
-- EXECUTION TIME:
1.16721
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1811/2569/main.py", line 5, in <module>
    d = sqrt((x[i] - m)** 2)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
